--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>Jin Log</h1>
-<p>学習ログや趣味の記録、日常を置いています。</p>
+<p>学習ログや、日常を置いています。</p>
 
 <ul>
   {% for post in site.posts %}
